# PyRustyMD

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.env/: pyvenv.cfg
.github/workflows/: CI.yml
src/: base.rs  debug.rs  lib.rs  main.rs  tag.rs  types.rs
src/advanced_detectors/: mod.rs  tag_detector.rs  tag_scope_detector.rs
src/detectors/: boolean_detector.rs  mod.rs  number_detector.rs  property_detector.rs  scope_detector.rs  word_detector.rs
src/html/: a.rs  div.rs  h.rs  img.rs  mod.rs  p.rs  span.rs
src/md/: mod.rs  text_style_detector.rs
src/tags/: attributes_detector.rs  mod.rs  tag_detector.rs  tag_scope_detector.rs
