[package]
name = "parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = { version = "0.14.2", features = ["extension-module"] }

[[bin]]
name="parser"
path="src/main.rs"

# PyO3 library
[lib]
crate-type = ["cdylib"]
name = "pyrustymd"
