[package]
name = "parser"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = { version = "0.14.2", features = ["extension-module"] }
regex = "1.10.2"

[[bin]]
name="parser"
path="src/main.rs"

# PyO3 library
[lib]
crate-type = ["cdylib"]
name = "pyrustymd"
