[package]
name = "parser"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = { version = "0.14.2", features = ["extension-module"] }
regex = "1.10.2"
fancy-regex = "0.13.0"

# PyO3 library
[lib]
crate-type = ["cdylib"]
name = "pyrustymd"

[[bin]]
name = "debug"
path = "src/debug.rs"